mengedit file certificate

--- a/certificate.html
+++ b/certificate.html
@@ -6,7 +6,7 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content />
         <meta name="author" content />
-        <title>Projects</title>
+        <title>Certificate</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
@@ -52,57 +52,42 @@
                     </div>
                 </div>
             </nav>
-            <!-- Projects Section-->
-            <section class="py-5">
-                <div class="container px-5 mb-5">
-                    <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span
-                                class="text-dark text-muted  d-inline">Projects</span></h1>
-                    </div>
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-11 col-xl-9 col-xxl-8">
-                            <!-- Project Card 1-->
-                            <div
-                                class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Caesar Chipper
-                                                Aplikasi</h2>
-                                            <p class="text-start">Caesar
-                                                chipper application is a
-                                                desktop application built using
-                                                java programming language. This
-                                                application serves to
-                                                <br>1. Perform encryption of
-                                                user-inputted words
-                                                <br>2. Perform decryption of the
-                                                inputted word</p>
+   <!-- Certificate card 1 -->
+  <section class="py-5 d-flex justify-content-center align-items-center">
+    <div class="container px-5 mb-5 text-center">
+                                            <h1 class="display-5 fw-bolder mb-0">
+                                                <span class="text-dark text-muted d-inline">Certificate</span>
+                                            </h1>
                                         </div>
-                                        <div class="col-sm-6">
-                                            <figure>
-                                                <img class="img-fluid"
-                                                    src="assets/portfolio1.png"
-                                                    alt="portfolio1">
-                                            </figure>
+                                    </section>
+                                    
+                                            <!-- Certificate card 1 -->
+                                            <div class="card border-0"
+                                                style="width: 30rem; background: none; margin: 0 auto;">
+                                                <img
+                                                    class="card-img-top mx-auto d-block"
+                                                    src="assets/sertifikat1.jpg"
+                                 alt="Sertifikat"
+                                                    style="width: auto; height: auto; max-width: 100%; max-height: 300px;">
+                                            </div>
                                         </div>
-
                                     </div>
                                 </div>
-                            </div>
-                            <!-- Project Card 2-->
+                            </section>
 
                         </div>
                     </div>
                 </div>
             </section>
+
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div
                     class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright
+                    <div class="col-auto"><div
+                            class="small m-0">Copyright
                             &copy; My Portofolio</div></div>
                 </div>
             </div>
