--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                                                 <br>2. Perform decryption of the
                                                 inputted word</p>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="col-sm-6 p-2">
                                             <figure>
                                                 <img class="img-fluid"
                                                     src="assets/portfolio1.png"
