menambahkan fitur projek

--- a/projects.html
+++ b/projects.html
@@ -62,18 +62,22 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
                             <!-- Project Card 1-->
+
+                            <!-- Project Card 2-->
                             <div
                                 class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Caesar Chipper
-                                                Aplikasi</h2>
-                                            <p class="text-start">Caesar
-                                                chipper application is a
-                                                desktop application built using
-                                                java programming language. This
-                                                application serves to
+                                            <h2 class="fw-bolder">Aplikasi
+                                                Absensi</h2>
+                                            <p class="text-start">The attendance
+                                                application is an application
+                                                made using the php programming
+                                                language with the CI 3
+                                                framework. This application has
+                                                2 access features, namely access
+                                                as an admin and employee.
                                                 <br>1. Perform encryption of
                                                 user-inputted words
                                                 <br>2. Perform decryption of the
@@ -90,7 +94,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 2-->
 
                         </div>
                     </div>
