--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,7 @@
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
                                 <a class="btn btn-success px-4 py-3"
-                                    href="https://drive.google.com/file/d/1kNJGOVOYQaMOwBiXwH21eQjN9aXkxC66/view?usp=drivesdk">
+                                    href="https://drive.google.com/file/d/1lZfo5eH59xrmlsEPGZnzB2CVsdp8qjVi/view?usp=sharing">
                                     <div
                                         class="d-inline-block bi bi-download me-2"></div>
                                     Download Resume
